Add PUT PATCH DELETE methods (#6)
Issue: RYU-459
Reviewer: wyattmufson
